syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "pet-angel/api/user/v1;v1";

// 用户服务
service UserService {
  // 用户注册
  rpc Register(RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/v1/user/register"
      body: "*"
    };
  }

  // 用户登录
  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }

  // 获取用户信息
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoReply) {
    option (google.api.http) = {
      get: "/v1/user/{user_id}"
    };
  }

  // 更新用户信息
  rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoReply) {
    option (google.api.http) = {
      put: "/v1/user/{user_id}"
      body: "*"
    };
  }

  // 关注用户
  rpc FollowUser(FollowUserRequest) returns (FollowUserReply) {
    option (google.api.http) = {
      post: "/v1/user/follow"
      body: "*"
    };
  }

  // 取消关注
  rpc UnfollowUser(UnfollowUserRequest) returns (UnfollowUserReply) {
    option (google.api.http) = {
      delete: "/v1/user/follow"
      body: "*"
    };
  }

  // 获取关注列表
  rpc GetFollowingList(GetFollowingListRequest) returns (GetFollowingListReply) {
    option (google.api.http) = {
      get: "/v1/user/{user_id}/following"
    };
  }

  // 获取粉丝列表
  rpc GetFollowersList(GetFollowersListRequest) returns (GetFollowersListReply) {
    option (google.api.http) = {
      get: "/v1/user/{user_id}/followers"
    };
  }
}

// 用户信息
message User {
  int64 user_id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  string gender = 5;
  string region = 6;
  string partner = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// 宠物信息
message Pet {
  int64 pet_id = 1;
  int64 user_id = 2;
  string name = 3;
  string species = 4;
  string gender = 5;
  double weight = 6;
  repeated string hobbies = 7;
  google.protobuf.Timestamp birthday = 8;
  google.protobuf.Timestamp adoption_date = 9;
  google.protobuf.Timestamp passed_away_date = 10;
  string memorial_words = 11;
  int64 avatar_id = 12;
  string background_image = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
}

// 注册请求
message RegisterRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string email = 4;
}

// 注册响应
message RegisterReply {
  User user = 1;
  string token = 2;
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginReply {
  User user = 1;
  string token = 2;
}

// 获取用户信息请求
message GetUserInfoRequest {
  int64 user_id = 1;
}

// 获取用户信息响应
message GetUserInfoReply {
  User user = 1;
  repeated Pet pets = 2;
  int32 following_count = 3;
  int32 followers_count = 4;
  int32 posts_count = 5;
}

// 更新用户信息请求
message UpdateUserInfoRequest {
  int64 user_id = 1;
  string nickname = 2;
  string avatar = 3;
  string gender = 4;
  string region = 5;
  string partner = 6;
}

// 更新用户信息响应
message UpdateUserInfoReply {
  User user = 1;
}

// 关注用户请求
message FollowUserRequest {
  int64 user_id = 1;
  int64 target_user_id = 2;
}

// 关注用户响应
message FollowUserReply {
  bool success = 1;
}

// 取消关注请求
message UnfollowUserRequest {
  int64 user_id = 1;
  int64 target_user_id = 2;
}

// 取消关注响应
message UnfollowUserReply {
  bool success = 1;
}

// 获取关注列表请求
message GetFollowingListRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 获取关注列表响应
message GetFollowingListReply {
  repeated User users = 1;
  int32 total = 2;
}

// 获取粉丝列表请求
message GetFollowersListRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 获取粉丝列表响应
message GetFollowersListReply {
  repeated User users = 1;
  int32 total = 2;
} 